<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.sample_completion.PreparationFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/sample_preparation_left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/sample_preparation_right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp" />

            <TextView
                android:id="@+id/sample_preparation_water_type_title"
                style="@style/TextAppearance.AiScope.TextView.SectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_preparation_water_type_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/sample_preparation_left_guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/sample_preparation_water_type_spinner"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/sample_preparation_water_types"
                app:layout_constraintStart_toStartOf="@id/sample_preparation_left_guideline"
                app:layout_constraintTop_toBottomOf="@id/sample_preparation_water_type_title" />

            <TextView
                android:id="@+id/sample_preparation_water_type_error"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mandatory_field_error"
                android:textColor="@color/colorError"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/sample_preparation_right_guideline"
                app:layout_constraintStart_toStartOf="@+id/sample_preparation_left_guideline"
                app:layout_constraintTop_toBottomOf="@id/sample_preparation_water_type_spinner" />

            <TextView
                android:id="@+id/sample_preparation_blood_quality_title"
                style="@style/TextAppearance.AiScope.TextView.SectionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sample_preparation_blood_quality_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/sample_preparation_left_guideline"
                app:layout_constraintTop_toBottomOf="@id/sample_preparation_water_type_error" />

            <Spinner
                android:id="@+id/sample_preparation_blood_quality_spinner"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:entries="@array/sample_preparation_blood_quality_types"
                app:layout_constraintStart_toStartOf="@id/sample_preparation_left_guideline"
                app:layout_constraintTop_toBottomOf="@id/sample_preparation_blood_quality_title" />

            <TextView
                android:id="@+id/sample_preparation_blood_quality_error"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/mandatory_field_error"
                android:textColor="@color/colorError"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/sample_preparation_right_guideline"
                app:layout_constraintStart_toStartOf="@+id/sample_preparation_left_guideline"
                app:layout_constraintTop_toBottomOf="@id/sample_preparation_blood_quality_spinner" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sample_preparation_giemsa_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sample_preparation_giemsa_title"
                app:layout_constraintEnd_toEndOf="@+id/sample_preparation_right_guideline"
                app:layout_constraintStart_toStartOf="@+id/sample_preparation_left_guideline"
                app:layout_constraintTop_toBottomOf="@id/sample_preparation_blood_quality_error" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sample_preparation_giemsa_fp_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sample_preparation_giemsa_fp_title"
                app:layout_constraintEnd_toEndOf="@+id/sample_preparation_right_guideline"
                app:layout_constraintStart_toStartOf="@+id/sample_preparation_left_guideline"
                app:layout_constraintTop_toBottomOf="@id/sample_preparation_giemsa_switch" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sample_preparation_pbs_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sample_preparation_pbs_title"
                app:layout_constraintEnd_toEndOf="@+id/sample_preparation_right_guideline"
                app:layout_constraintStart_toStartOf="@+id/sample_preparation_left_guideline"
                app:layout_constraintTop_toBottomOf="@id/sample_preparation_giemsa_fp_switch" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/sample_preparation_slides_reuse_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sample_preparation_slides_reuse_title"
                app:layout_constraintEnd_toEndOf="@+id/sample_preparation_right_guideline"
                app:layout_constraintStart_toStartOf="@+id/sample_preparation_left_guideline"
                app:layout_constraintTop_toBottomOf="@id/sample_preparation_pbs_switch" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>